Bug #41208
os/bluestore/NVMEDevice:when write\read\flush func eorror in aio_handle, without error code;
History
#1 Updated by Patrick Donnelly over 1 year ago
- Project changed from CephFS to bluestore
Hello, I think your ticket is incomplete?
#2 Updated by Neha Ojha over 1 year ago
- Status changed from New to Fix Under Review
- Pull request ID set to 29610
#3 Updated by Kefu Chai about 1 year ago
- Assignee set to Kefu Chai
- Pull request ID changed from 29610 to 31932